feat : resume url

--- a/index.html
+++ b/index.html
@@ -2618,7 +2618,7 @@
     <script>
         document.getElementById("download-btn").addEventListener("click", function () {
             const link = document.createElement("a");
-            link.href = "file:///Users/muhammadahmad/Desktop/Learnings/portfolio/saveweb2zip-com-jandjteams-com/images/Waqas%20Resume.pdf"; // Absolute or correct relative URL
+            link.href = "https://calm-field-0b8b8b60f.5.azurestaticapps.net//images/Waqas%20Resume.pdf"; // Absolute or correct relative URL
             link.download = "waqas-resume.pdf";
             link.click();
         });
